Fix JVM problem with Docker cpu&memory limits
More detail: https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits

Change-Id: I9d0fd6ff8caa8f492a79772d81e2937ccd9a3944
Issue-ID: EXTAPI-91
Signed-off-by: Quoc Nghia Nguyen <quocnghia.nguyen@orange.com>